add api wallets/income, buggets/rebalance, buggets/expenses
