# src/wallet/presentation/WalletHandler.go
@@ -3,9 +3,10 @@ package presentation
 import (
 	"encoding/json"
 	"net/http"
-	"github.com/shopspring/decimal"
 	"src/src/wallet/usecase"
 	"time"
+
+	"github.com/shopspring/decimal"
 )
 
 type WalletHandler struct {
@@ -52,7 +53,7 @@ func (h *WalletHandler) CreateWallet(w http.ResponseWriter, r *http.Request) {
 type RecordExpenseRequest struct {
 	WalletID    string `json:"wallet_id"`
 	CategoryID  string `json:"category_id"`
-	Amount      string `json:"amount"` // String to maintain decimal precision
+	Amount      string `json:"amount"`
 	Currency    string `json:"currency"`
 	Description string `json:"description"`
 }
@@ -91,4 +92,48 @@ func (h *WalletHandler) RecordExpense(w http.ResponseWriter, r *http.Request) {
 
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte(`{"message": "Expense recorded successfully"}`))
+}
+
+type RecordIncomeRequest struct {
+	WalletID    string `json:"wallet_id"`
+	CategoryID  string `json:"category_id"`
+	Amount      string `json:"amount"`
+	Currency    string `json:"currency"`
+	Description string `json:"description"`
+}
+
+func (h *WalletHandler) RecordIncome(w http.ResponseWriter, r *http.Request) {
+	if r.Method != http.MethodPost {
+		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+		return
+	}
+
+	var req RecordIncomeRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		http.Error(w, "Invalid request body", http.StatusBadRequest)
+		return
+	}
+
+	amount, err := decimal.NewFromString(req.Amount)
+	if err != nil {
+		http.Error(w, "Invalid amount format", http.StatusBadRequest)
+		return
+	}
+
+	err = h.walletUsecase.RecordIncome(usecase.RecordIncomeRequest{
+		WalletID:    req.WalletID,
+		CategoryID:  req.CategoryID,
+		Amount:      amount,
+		Currency:    req.Currency,
+		Description: req.Description,
+		Timestamp:   time.Now().UnixNano(),
+	})
+
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	w.Write([]byte(`{"message": "Income recorded successfully"}`))
 }
